# dp

./: .gitignore  CMakeLists.txt  beamerouterthemeinfolinesC.sty  beamerthemeNikola.sty
bricks/: brick-common.h  brick-db.h  brick-net.h  brick-shmem.h
measurement/execute/: generate.py  hosts01  hosts02  hosts03  hosts04  hosts05  hosts06  hosts07  hosts08  hosts09  hosts10  hosts11  hosts12  hosts13  hosts14  hosts15  hosts16  run.py  structures.py
measurement/load/fastProbe/: stats-load-dedicated-1-1000.txt  stats-load-dedicated-2-1000.txt  stats-load-dedicated-3-1000.txt  (+5 more)
measurement/ping/: stats-ping-dedicated-1-10.txt  stats-ping-dedicated-1-100.txt  stats-ping-dedicated-2-10.txt  stats-ping-dedicated-2-100.txt  stats-ping-dedicated-3-10.txt  stats-ping-dedicated-3-100.txt  stats-ping-dedicated-4-10.txt  stats-ping-dedicated-4-100.txt  stats-ping-shared-1-10.txt  stats-ping-shared-1-100.txt  stats-ping-shared-2-10.txt  stats-ping-shared-2-100.txt  stats-ping-shared-3-10.txt  stats-ping-shared-3-100.txt  stats-ping-shared-4-10.txt  stats-ping-shared-4-100.txt
presentation/: beamer_template.tex  slides.md
src/: CMakeLists.txt  client.cpp  client.h  communicator.cpp  communicator.h  connections.h  daemon.cpp  daemon.h  demo.cpp  logger.cpp  logger.h  message.cpp  message.h  meta.cpp  meta.hpp  mpi.cpp  test.cpp  worker.h  worker.hpp  workerLoad.hpp  workerPing.hpp
text/: Makefile  States.vsdx  TCP-connect.vsdx  TCPvsUDP.vsdx  UDP-communication.vsdx  appendix.md  bibliography.bib  cleanup.sh  draft.md  markdownsyntax.sty  measurement.txt  text.md  thesis.tex
(+48 files in other folders)
